# jeedom-status

./: .gitignore  .goreleaser.yml  .goreleaser_hook.sh  Cargo.toml  Cross.toml  Dockerfile  PKGBUILD  README.md  cargo_build.sh  go.mod  go.sum  main.go
.github/workflows/: push.yml  release.yml
cmd/: get.go  get_test.go  root.go  version.go
docs/: index.html
integration/bitbar/: jeedom-status.1m.sh
integration/i3blocks/: i3blocks.conf
pkg/: config.go  japi.go  jeedom_40.go  jeedom_41.go  jeedom_api.go  jeedom_common.go  jeedom_summary.go  jsummary.go  utils.go  version.go
src/: api.rs  io_models.rs  main.rs  output.rs
