[package]
name = "jeedom-status"
authors = ["Pierre Mavro"]
version = "2.0.0"
edition = "2021"

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
ureq = { version = "2.8.0", features = ["json"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
url = "2.4.1"
thiserror = "1.0.49"
void = "1.0.2"
phf = { version = "0.11.2", features = ["macros"] }
colored = "2.0.4"
derivative = "2.2.0"
